// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow-direction prop 1`] = `
<div role="button" tabindex="0" class="zv-cell zv-cell--clickable zv-field">
  <div class="zv-cell__value zv-cell__value--alone zv-field__value">
    <div class="zv-field__body"><input type="text" class="zv-field__control"></div>
  </div><i class="zv-icon zv-icon-arrow-up zv-cell__right-icon">
    <!----></i>
</div>
`;

exports[`clearable 1`] = `
<div class="zv-cell zv-field">
  <div class="zv-cell__value zv-cell__value--alone zv-field__value">
    <div class="zv-field__body"><input type="text" class="zv-field__control"></div>
  </div>
</div>
`;

exports[`clearable 2`] = `
<div class="zv-cell zv-field">
  <div class="zv-cell__value zv-cell__value--alone zv-field__value">
    <div class="zv-field__body"><input type="text" class="zv-field__control"><i class="zv-icon zv-icon-clear zv-field__clear">
        <!----></i></div>
  </div>
</div>
`;

exports[`label-class prop 1`] = `
<div class="zv-cell zv-field">
  <div class="zv-cell__title zv-field__label custom-label-class"><span>Label</span></div>
  <div class="zv-cell__value zv-field__value">
    <div class="zv-field__body"><input type="text" class="zv-field__control"></div>
  </div>
</div>
`;

exports[`label-width prop with unit 1`] = `
<div class="zv-cell zv-field">
  <div class="zv-cell__title zv-field__label" style="width: 10rem;"><span>Label</span></div>
  <div class="zv-cell__value zv-field__value">
    <div class="zv-field__body"><input type="text" class="zv-field__control"></div>
  </div>
</div>
`;

exports[`label-width prop without unit 1`] = `
<div class="zv-cell zv-field">
  <div class="zv-cell__title zv-field__label" style="width: 100px;"><span>Label</span></div>
  <div class="zv-cell__value zv-field__value">
    <div class="zv-field__body"><input type="text" class="zv-field__control"></div>
  </div>
</div>
`;

exports[`name prop 1`] = `
<div class="zv-cell zv-field">
  <div class="zv-cell__value zv-cell__value--alone zv-field__value">
    <div class="zv-field__body"><input type="text" name="foo" class="zv-field__control"></div>
  </div>
</div>
`;

exports[`reach max word-limit 1`] = `
<div class="zv-cell zv-field">
  <div class="zv-cell__value zv-cell__value--alone zv-field__value">
    <div class="zv-field__body"><input type="text" class="zv-field__control"></div>
    <div class="zv-field__word-limit"><span class="zv-field__word-num zv-field__word-num--full">3</span>/3</div>
  </div>
</div>
`;

exports[`render input slot 1`] = `
<div class="zv-cell zv-field">
  <div class="zv-cell__value zv-cell__value--alone zv-field__value">
    <div class="zv-field__body">
      <div class="zv-field__control zv-field__control--custom">Custom Input</div>
    </div>
  </div>
</div>
`;

exports[`render label slot 1`] = `
<div class="zv-cell zv-field">
  <div class="zv-cell__title zv-field__label">Custom Label</div>
  <div class="zv-cell__value zv-field__value">
    <div class="zv-field__body"><input type="text" class="zv-field__control"></div>
  </div>
</div>
`;

exports[`render textarea 1`] = `
<div class="zv-cell zv-field">
  <div class="zv-cell__value zv-cell__value--alone zv-field__value">
    <div class="zv-field__body"><textarea class="zv-field__control" style="height: auto;"></textarea></div>
  </div>
</div>
`;

exports[`size prop 1`] = `
<div class="zv-cell zv-cell--large zv-field">
  <div class="zv-cell__value zv-cell__value--alone zv-field__value">
    <div class="zv-field__body"><input type="text" class="zv-field__control"></div>
  </div>
</div>
`;
